[session notes] topics: React-basics, JSX, Components, Creating functional components, create-react-app, react file structure overview.

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*{
+  margin:0;
+  padding: 0;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgb(104, 97, 97);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +14,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header{
+  color: #333;
 }
